overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calorielens-api
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: api.121.138.171.230.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calorielens-api
                port:
                  number: 80
  tls:
    - hosts:
        - api.121.138.171.230.sslip.io
      secretName: calorielens-api-tls
